--- a/docs/contents/document/server-references/mcp-server/cli-reference.mdx
+++ b/docs/contents/document/server-references/mcp-server/cli-reference.mdx
@@ -251,16 +251,34 @@ The MCP server can be started using multiple execution methods:
 **Unit**: `Seconds`  
 **Description**: Request timeout for Slack API calls.
 
-```bash
-# Default timeout (30 seconds)
-python -m slack_mcp.mcp --timeout 30
-
-# Shorter timeout for fast networks
-python -m slack_mcp.mcp --timeout 15
-
-# Longer timeout for slow networks
-python -m slack_mcp.mcp --timeout 60
-```
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  slack-mcp-server --timeout 30
+  slack-mcp-server --timeout 15
+  slack-mcp-server --timeout 60
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  python -m slack_mcp.mcp --timeout 30
+  python -m slack_mcp.mcp --timeout 15
+  python -m slack_mcp.mcp --timeout 60
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  poetry run slack-mcp-server --timeout 30
+  poetry run python -m slack_mcp.mcp --timeout 30
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  uv run slack-mcp-server --timeout 30
+  uv run python -m slack_mcp.mcp --timeout 30
+  ```
+  </TabItem>
+</Tabs>
 
 #### `--max-retries`
 **Type**: `Integer`  
@@ -268,165 +286,300 @@ python -m slack_mcp.mcp --timeout 60
 **Range**: `0-10`  
 **Description**: Maximum number of retry attempts for failed requests.
 
-```bash
-# Default retries
-python -m slack_mcp.mcp --max-retries 3
-
-# No retries (fail fast)
-python -m slack_mcp.mcp --max-retries 0
-
-# More retries for unreliable networks
-python -m slack_mcp.mcp --max-retries 5
-```
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  slack-mcp-server --max-retries 3
+  slack-mcp-server --max-retries 0
+  slack-mcp-server --max-retries 5
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  python -m slack_mcp.mcp --max-retries 3
+  python -m slack_mcp.mcp --max-retries 0
+  python -m slack_mcp.mcp --max-retries 5
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  poetry run slack-mcp-server --max-retries 3
+  poetry run python -m slack_mcp.mcp --max-retries 3
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  uv run slack-mcp-server --max-retries 3
+  uv run python -m slack_mcp.mcp --max-retries 3
+  ```
+  </TabItem>
+</Tabs>
 
 ## Usage Examples
 
 ### Development Environment
 
-```bash
-# Method 1: Console Script (Recommended for development)
-slack-mcp-server \
-  --transport stdio \
-  --log-level DEBUG
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Recommended for development
+  slack-mcp-server \
+    --transport stdio \
+    --log-level DEBUG
 
-slack-mcp-server \
-  --transport sse \
-  --host 127.0.0.1 \
-  --port 3001 \
-  --log-level DEBUG
+  slack-mcp-server \
+    --transport sse \
+    --host 127.0.0.1 \
+    --port 3001 \
+    --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Direct Python execution
+  python -m slack_mcp.mcp \
+    --transport stdio \
+    --log-level DEBUG
 
-# Method 2: Python Module
-python -m slack_mcp.mcp \
-  --transport stdio \
-  --log-level DEBUG
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --host 127.0.0.1 \
+    --port 3001 \
+    --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Development workflow with Poetry
+  poetry run slack-mcp-server \
+    --transport sse \
+    --host 127.0.0.1 \
+    --port 3001 \
+    --log-level DEBUG
 
-# Method 3: Poetry (Development workflow)
-poetry run slack-mcp-server \
-  --transport sse \
-  --host 127.0.0.1 \
-  --port 3001 \
-  --log-level DEBUG
+  poetry run python -m slack_mcp.mcp \
+    --transport stdio \
+    --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Modern Python package management
+  uv run slack-mcp-server \
+    --transport sse \
+    --host 127.0.0.1 \
+    --port 3001 \
+    --log-level DEBUG
 
-# Method 4: UV (Modern Python package management)
-uv run slack-mcp-server \
-  --transport sse \
-  --host 127.0.0.1 \
-  --port 3001 \
-  --log-level DEBUG
-```
+  uv run python -m slack_mcp.mcp \
+    --transport stdio \
+    --log-level DEBUG
+  ```
+  </TabItem>
+</Tabs>
 
 ### Production Environment
 
-```bash
-# Method 1: Console Script (Recommended for production deployments)
-slack-mcp-server \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Recommended for production deployments
+  slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-slack-mcp-server \
-  --transport streamable-http \
-  --host 0.0.0.0 \
-  --port 8080 \
-  --log-level WARNING
+  slack-mcp-server \
+    --transport streamable-http \
+    --host 0.0.0.0 \
+    --port 8080 \
+    --log-level WARNING
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Alternative Python module execution
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Method 2: Python Module (Alternative)
-python -m slack_mcp.mcp \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
+  python -m slack_mcp.mcp \
+    --transport streamable-http \
+    --host 0.0.0.0 \
+    --port 8080 \
+    --log-level WARNING
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Development server in production-like mode
+  poetry run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Method 3: Poetry (Development server in production-like mode)
-poetry run slack-mcp-server \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
+  poetry run python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Production deployment with UV
+  uv run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Method 4: UV (Production deployment with UV)
-uv run slack-mcp-server \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
-```
+  uv run python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  ```
+  </TabItem>
+</Tabs>
 
 ### Testing Configurations
 
-```bash
-# Method 1: Console Script (Quick testing)
-slack-mcp-server --log-level DEBUG
-slack-mcp-server \
-  --transport sse \
-  --port 0 \
-  --log-level DEBUG
-slack-mcp-server \
-  --transport sse \
-  --mount-path /test/mcp \
-  --log-level DEBUG
-
-# Method 2: Python Module (Direct execution)
-python -m slack_mcp.mcp --log-level DEBUG
-python -m slack_mcp.mcp \
-  --transport sse \
-  --port 0 \
-  --log-level DEBUG
-
-# Method 3: Poetry (Development testing)
-poetry run slack-mcp-server --log-level DEBUG
-poetry run slack-mcp-server \
-  --transport sse \
-  --port 0 \
-  --log-level DEBUG
-
-# Method 4: UV (Modern testing workflow)
-uv run slack-mcp-server --log-level DEBUG
-uv run slack-mcp-server \
-  --transport sse \
-  --port 0 \
-  --log-level DEBUG
-```
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Quick testing configurations
+  slack-mcp-server --log-level DEBUG
+  
+  slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG
+  
+  slack-mcp-server \
+    --transport sse \
+    --mount-path /test/mcp \
+    --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Direct execution for testing
+  python -m slack_mcp.mcp --log-level DEBUG
+  
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG
+  
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --mount-path /test/mcp \
+    --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Development testing with Poetry
+  poetry run slack-mcp-server --log-level DEBUG
+  
+  poetry run slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG
+  
+  poetry run python -m slack_mcp.mcp --log-level DEBUG
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Modern testing workflow with UV
+  uv run slack-mcp-server --log-level DEBUG
+  
+  uv run slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG
+  
+  uv run python -m slack_mcp.mcp --log-level DEBUG
+  ```
+  </TabItem>
+</Tabs>
 
 ### Container Deployments
 
-```bash
-# Docker container configuration (Method 1: Console Script)
-slack-mcp-server \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Docker container configuration
+  slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Docker container configuration (Method 2: Python Module)
-python -m slack_mcp.mcp \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
+  # Kubernetes pod configuration
+  slack-mcp-server \
+    --transport streamable-http \
+    --host 0.0.0.0 \
+    --port ${PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO}
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Docker container configuration
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Kubernetes pod configuration (Method 1: Console Script)
-slack-mcp-server \
-  --transport streamable-http \
-  --host 0.0.0.0 \
-  --port ${PORT:-3001} \
-  --log-level ${LOG_LEVEL:-INFO}
+  # Kubernetes pod configuration
+  python -m slack_mcp.mcp \
+    --transport streamable-http \
+    --host 0.0.0.0 \
+    --port ${PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO}
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Container deployment with Poetry
+  poetry run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# Kubernetes pod configuration (Method 2: Python Module)
-python -m slack_mcp.mcp \
-  --transport streamable-http \
-  --host 0.0.0.0 \
-  --port ${PORT:-3001} \
-  --log-level ${LOG_LEVEL:-INFO}
+  poetry run python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Modern container approach with UV
+  uv run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
 
-# UV in container (Method 4: Modern approach)
-uv run slack-mcp-server \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
-```
+  uv run python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  ```
+  </TabItem>
+</Tabs>
 
 ## Environment Variable Override
 
@@ -444,14 +597,48 @@ CLI options can be overridden by environment variables:
 
 **Precedence**: CLI arguments override environment variables, which override defaults.
 
-```bash
-# Environment variable with CLI override
-export MCP_TRANSPORT=sse
-export MCP_PORT=8080
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Environment variable with CLI override
+  export MCP_TRANSPORT=sse
+  export MCP_PORT=8080
 
-# This will use stdio transport and port 3001 (CLI overrides)
-python -m slack_mcp.mcp --transport stdio --port 3001
-```
+  # This will use stdio transport and port 3001 (CLI overrides)
+  slack-mcp-server --transport stdio --port 3001
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Environment variable with CLI override
+  export MCP_TRANSPORT=sse
+  export MCP_PORT=8080
+
+  # This will use stdio transport and port 3001 (CLI overrides)
+  python -m slack_mcp.mcp --transport stdio --port 3001
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Environment variable with CLI override
+  export MCP_TRANSPORT=sse
+  export MCP_PORT=8080
+
+  # This will use stdio transport and port 3001 (CLI overrides)
+  poetry run slack-mcp-server --transport stdio --port 3001
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Environment variable with CLI override
+  export MCP_TRANSPORT=sse
+  export MCP_PORT=8080
+
+  # This will use stdio transport and port 3001 (CLI overrides)
+  uv run slack-mcp-server --transport stdio --port 3001
+  ```
+  </TabItem>
+</Tabs>
 
 ## Configuration Scripts
 
@@ -461,56 +648,218 @@ Create reusable startup scripts for different environments:
 
 #### Development Script (`start-dev.sh`)
 
-```bash
-#!/bin/bash
-# start-dev.sh
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  #!/bin/bash
+  # start-dev.sh
 
-export SLACK_BOT_TOKEN="xoxb-your-dev-token"
-export MCP_TRANSPORT="stdio"
-export LOG_LEVEL="DEBUG"
+  export SLACK_BOT_TOKEN="xoxb-your-dev-token"
+  export MCP_TRANSPORT="stdio"
+  export LOG_LEVEL="DEBUG"
 
-echo "Starting MCP server in development mode..."
-python -m slack_mcp.mcp \
-  --log-level DEBUG \
-  --timeout 15 \
-  --max-retries 1
-```
+  echo "Starting MCP server in development mode..."
+  slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 15 \
+    --max-retries 1
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  #!/bin/bash
+  # start-dev.sh
+
+  export SLACK_BOT_TOKEN="xoxb-your-dev-token"
+  export MCP_TRANSPORT="stdio"
+  export LOG_LEVEL="DEBUG"
+
+  echo "Starting MCP server in development mode..."
+  python -m slack_mcp.mcp \
+    --log-level DEBUG \
+    --timeout 15 \
+    --max-retries 1
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  #!/bin/bash
+  # start-dev.sh
+
+  export SLACK_BOT_TOKEN="xoxb-your-dev-token"
+  export MCP_TRANSPORT="stdio"
+  export LOG_LEVEL="DEBUG"
+
+  echo "Starting MCP server in development mode..."
+  poetry run slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 15 \
+    --max-retries 1
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  #!/bin/bash
+  # start-dev.sh
+
+  export SLACK_BOT_TOKEN="xoxb-your-dev-token"
+  export MCP_TRANSPORT="stdio"
+  export LOG_LEVEL="DEBUG"
+
+  echo "Starting MCP server in development mode..."
+  uv run slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 15 \
+    --max-retries 1
+  ```
+  </TabItem>
+</Tabs>
 
 #### Production Script (`start-prod.sh`)
 
-```bash
-#!/bin/bash
-# start-prod.sh
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  #!/bin/bash
+  # start-prod.sh
 
-# Load environment variables
-source .env.production
+  # Load environment variables
+  source .env.production
 
-echo "Starting MCP server in production mode..."
-python -m slack_mcp.mcp \
-  --transport ${MCP_TRANSPORT:-sse} \
-  --host ${MCP_HOST:-0.0.0.0} \
-  --port ${MCP_PORT:-3001} \
-  --log-level ${LOG_LEVEL:-INFO} \
-  --timeout ${MCP_TIMEOUT:-60} \
-  --max-retries ${MCP_MAX_RETRIES:-5}
-```
+  echo "Starting MCP server in production mode..."
+  slack-mcp-server \
+    --transport ${MCP_TRANSPORT:-sse} \
+    --host ${MCP_HOST:-0.0.0.0} \
+    --port ${MCP_PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO} \
+    --timeout ${MCP_TIMEOUT:-60} \
+    --max-retries ${MCP_MAX_RETRIES:-5}
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  #!/bin/bash
+  # start-prod.sh
+
+  # Load environment variables
+  source .env.production
+
+  echo "Starting MCP server in production mode..."
+  python -m slack_mcp.mcp \
+    --transport ${MCP_TRANSPORT:-sse} \
+    --host ${MCP_HOST:-0.0.0.0} \
+    --port ${MCP_PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO} \
+    --timeout ${MCP_TIMEOUT:-60} \
+    --max-retries ${MCP_MAX_RETRIES:-5}
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  #!/bin/bash
+  # start-prod.sh
+
+  # Load environment variables
+  source .env.production
+
+  echo "Starting MCP server in production mode..."
+  poetry run slack-mcp-server \
+    --transport ${MCP_TRANSPORT:-sse} \
+    --host ${MCP_HOST:-0.0.0.0} \
+    --port ${MCP_PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO} \
+    --timeout ${MCP_TIMEOUT:-60} \
+    --max-retries ${MCP_MAX_RETRIES:-5}
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  #!/bin/bash
+  # start-prod.sh
+
+  # Load environment variables
+  source .env.production
+
+  echo "Starting MCP server in production mode..."
+  uv run slack-mcp-server \
+    --transport ${MCP_TRANSPORT:-sse} \
+    --host ${MCP_HOST:-0.0.0.0} \
+    --port ${MCP_PORT:-3001} \
+    --log-level ${LOG_LEVEL:-INFO} \
+    --timeout ${MCP_TIMEOUT:-60} \
+    --max-retries ${MCP_MAX_RETRIES:-5}
+  ```
+  </TabItem>
+</Tabs>
 
 #### Testing Script (`start-test.sh`)
 
-```bash
-#!/bin/bash
-# start-test.sh
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  #!/bin/bash
+  # start-test.sh
 
-export SLACK_BOT_TOKEN="xoxb-test-token"
+  export SLACK_BOT_TOKEN="xoxb-test-token"
 
-echo "Starting MCP server in test mode..."
-python -m slack_mcp.mcp \
-  --transport sse \
-  --port 0 \
-  --log-level DEBUG \
-  --timeout 10 \
-  --max-retries 0
-```
+  echo "Starting MCP server in test mode..."
+  slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG \
+    --timeout 10 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  #!/bin/bash
+  # start-test.sh
+
+  export SLACK_BOT_TOKEN="xoxb-test-token"
+
+  echo "Starting MCP server in test mode..."
+  python -m slack_mcp.mcp \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG \
+    --timeout 10 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  #!/bin/bash
+  # start-test.sh
+
+  export SLACK_BOT_TOKEN="xoxb-test-token"
+
+  echo "Starting MCP server in test mode..."
+  poetry run slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG \
+    --timeout 10 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  #!/bin/bash
+  # start-test.sh
+
+  export SLACK_BOT_TOKEN="xoxb-test-token"
+
+  echo "Starting MCP server in test mode..."
+  uv run slack-mcp-server \
+    --transport sse \
+    --port 0 \
+    --log-level DEBUG \
+    --timeout 10 \
+    --max-retries 0
+  ```
+  </TabItem>
+</Tabs>
 
 ### Process Management
 
@@ -518,70 +867,257 @@ python -m slack_mcp.mcp \
 
 Create a systemd service (`/etc/systemd/system/mcp-server.service`):
 
-```ini
-[Unit]
-Description=Slack MCP Server
-After=network.target
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```ini
+  [Unit]
+  Description=Slack MCP Server
+  After=network.target
 
-[Service]
-Type=simple
-User=mcp
-WorkingDirectory=/opt/slack-mcp-server
-EnvironmentFile=/opt/slack-mcp-server/.env.production
-ExecStart=/opt/slack-mcp-server/venv/bin/python -m slack_mcp.mcp \
-  --transport sse \
-  --host 0.0.0.0 \
-  --port 3001 \
-  --log-level INFO
-Restart=always
-RestartSec=10
+  [Service]
+  Type=simple
+  User=mcp
+  WorkingDirectory=/opt/slack-mcp-server
+  EnvironmentFile=/opt/slack-mcp-server/.env.production
+  ExecStart=/opt/slack-mcp-server/venv/bin/slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  Restart=always
+  RestartSec=10
 
-[Install]
-WantedBy=multi-user.target
-```
+  [Install]
+  WantedBy=multi-user.target
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```ini
+  [Unit]
+  Description=Slack MCP Server
+  After=network.target
+
+  [Service]
+  Type=simple
+  User=mcp
+  WorkingDirectory=/opt/slack-mcp-server
+  EnvironmentFile=/opt/slack-mcp-server/.env.production
+  ExecStart=/opt/slack-mcp-server/venv/bin/python -m slack_mcp.mcp \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  Restart=always
+  RestartSec=10
+
+  [Install]
+  WantedBy=multi-user.target
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```ini
+  [Unit]
+  Description=Slack MCP Server
+  After=network.target
+
+  [Service]
+  Type=simple
+  User=mcp
+  WorkingDirectory=/opt/slack-mcp-server
+  EnvironmentFile=/opt/slack-mcp-server/.env.production
+  ExecStart=/opt/slack-mcp-server/.venv/bin/poetry run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  Restart=always
+  RestartSec=10
+
+  [Install]
+  WantedBy=multi-user.target
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```ini
+  [Unit]
+  Description=Slack MCP Server
+  After=network.target
+
+  [Service]
+  Type=simple
+  User=mcp
+  WorkingDirectory=/opt/slack-mcp-server
+  EnvironmentFile=/opt/slack-mcp-server/.env.production
+  ExecStart=/opt/slack-mcp-server/.venv/bin/uv run slack-mcp-server \
+    --transport sse \
+    --host 0.0.0.0 \
+    --port 3001 \
+    --log-level INFO
+  Restart=always
+  RestartSec=10
+
+  [Install]
+  WantedBy=multi-user.target
+  ```
+  </TabItem>
+</Tabs>
 
 #### Using supervisor
 
 Create supervisor configuration (`/etc/supervisor/conf.d/mcp-server.conf`):
 
-```ini
-[program:mcp-server]
-command=/opt/slack-mcp-server/venv/bin/python -m slack_mcp.mcp --transport sse --host 0.0.0.0 --port 3001
-directory=/opt/slack-mcp-server
-environment=SLACK_BOT_TOKEN="xoxb-token",MCP_TRANSPORT="sse",LOG_LEVEL="INFO"
-user=mcp
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/log/mcp-server.log
-```
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```ini
+  [program:mcp-server]
+  command=/opt/slack-mcp-server/venv/bin/slack-mcp-server --transport sse --host 0.0.0.0 --port 3001
+  directory=/opt/slack-mcp-server
+  environment=SLACK_BOT_TOKEN="xoxb-token",MCP_TRANSPORT="sse",LOG_LEVEL="INFO"
+  user=mcp
+  autostart=true
+  autorestart=true
+  redirect_stderr=true
+  stdout_logfile=/var/log/mcp-server.log
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```ini
+  [program:mcp-server]
+  command=/opt/slack-mcp-server/venv/bin/python -m slack_mcp.mcp --transport sse --host 0.0.0.0 --port 3001
+  directory=/opt/slack-mcp-server
+  environment=SLACK_BOT_TOKEN="xoxb-token",MCP_TRANSPORT="sse",LOG_LEVEL="INFO"
+  user=mcp
+  autostart=true
+  autorestart=true
+  redirect_stderr=true
+  stdout_logfile=/var/log/mcp-server.log
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```ini
+  [program:mcp-server]
+  command=/opt/slack-mcp-server/.venv/bin/poetry run slack-mcp-server --transport sse --host 0.0.0.0 --port 3001
+  directory=/opt/slack-mcp-server
+  environment=SLACK_BOT_TOKEN="xoxb-token",MCP_TRANSPORT="sse",LOG_LEVEL="INFO"
+  user=mcp
+  autostart=true
+  autorestart=true
+  redirect_stderr=true
+  stdout_logfile=/var/log/mcp-server.log
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```ini
+  [program:mcp-server]
+  command=/opt/slack-mcp-server/.venv/bin/uv run slack-mcp-server --transport sse --host 0.0.0.0 --port 3001
+  directory=/opt/slack-mcp-server
+  environment=SLACK_BOT_TOKEN="xoxb-token",MCP_TRANSPORT="sse",LOG_LEVEL="INFO"
+  user=mcp
+  autostart=true
+  autorestart=true
+  redirect_stderr=true
+  stdout_logfile=/var/log/mcp-server.log
+  ```
+  </TabItem>
+</Tabs>
 
 ## Help and Version Information
 
 ### Display Help
 
-```bash
-# Show all available options
-python -m slack_mcp.mcp --help
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Show all available options
+  slack-mcp-server --help
 
-# Show version information
-python -m slack_mcp.mcp --version
-```
+  # Show version information
+  slack-mcp-server --version
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Show all available options
+  python -m slack_mcp.mcp --help
+
+  # Show version information
+  python -m slack_mcp.mcp --version
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Show all available options
+  poetry run slack-mcp-server --help
+
+  # Show version information
+  poetry run slack-mcp-server --version
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Show all available options
+  uv run slack-mcp-server --help
+
+  # Show version information
+  uv run slack-mcp-server --version
+  ```
+  </TabItem>
+</Tabs>
 
 ### Built-in Validation
 
 The CLI performs automatic validation:
 
-```bash
-# Invalid transport (will show error)
-python -m slack_mcp.mcp --transport invalid
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Invalid transport (will show error)
+  slack-mcp-server --transport invalid
 
-# Invalid port range (will show error)  
-python -m slack_mcp.mcp --transport sse --port 70000
+  # Invalid port range (will show error)  
+  slack-mcp-server --transport sse --port 70000
 
-# Invalid log level (will show error)
-python -m slack_mcp.mcp --log-level INVALID
-```
+  # Invalid log level (will show error)
+  slack-mcp-server --log-level INVALID
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Invalid transport (will show error)
+  python -m slack_mcp.mcp --transport invalid
+
+  # Invalid port range (will show error)  
+  python -m slack_mcp.mcp --transport sse --port 70000
+
+  # Invalid log level (will show error)
+  python -m slack_mcp.mcp --log-level INVALID
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Invalid transport (will show error)
+  poetry run slack-mcp-server --transport invalid
+
+  # Invalid port range (will show error)  
+  poetry run slack-mcp-server --transport sse --port 70000
+
+  # Invalid log level (will show error)
+  poetry run slack-mcp-server --log-level INVALID
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Invalid transport (will show error)
+  uv run slack-mcp-server --transport invalid
+
+  # Invalid port range (will show error)  
+  uv run slack-mcp-server --transport sse --port 70000
+
+  # Invalid log level (will show error)
+  uv run slack-mcp-server --log-level INVALID
+  ```
+  </TabItem>
+</Tabs>
 
 ## Troubleshooting CLI Issues
 
@@ -589,53 +1125,191 @@ python -m slack_mcp.mcp --log-level INVALID
 
 #### 1. Permission Denied
 
-```bash
-# Error: Permission denied on port 80
-python -m slack_mcp.mcp --transport sse --port 80
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Error: Permission denied on port 80
+  slack-mcp-server --transport sse --port 80
 
-# Solution: Use non-privileged port or run with sudo
-python -m slack_mcp.mcp --transport sse --port 8080
-```
+  # Solution: Use non-privileged port or run with sudo
+  slack-mcp-server --transport sse --port 8080
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Error: Permission denied on port 80
+  python -m slack_mcp.mcp --transport sse --port 80
+
+  # Solution: Use non-privileged port or run with sudo
+  python -m slack_mcp.mcp --transport sse --port 8080
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Error: Permission denied on port 80
+  poetry run slack-mcp-server --transport sse --port 80
+
+  # Solution: Use non-privileged port or run with sudo
+  poetry run slack-mcp-server --transport sse --port 8080
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Error: Permission denied on port 80
+  uv run slack-mcp-server --transport sse --port 80
+
+  # Solution: Use non-privileged port or run with sudo
+  uv run slack-mcp-server --transport sse --port 8080
+  ```
+  </TabItem>
+</Tabs>
 
 #### 2. Port Already in Use
 
-```bash
-# Error: Address already in use
-python -m slack_mcp.mcp --transport sse --port 3001
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Error: Address already in use
+  slack-mcp-server --transport sse --port 3001
 
-# Solution: Find and kill process or use different port
-lsof -ti:3001 | xargs kill -9
-# OR
-python -m slack_mcp.mcp --transport sse --port 3002
-```
+  # Solution: Find and kill process or use different port
+  lsof -ti:3001 | xargs kill -9
+  # OR
+  slack-mcp-server --transport sse --port 3002
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Error: Address already in use
+  python -m slack_mcp.mcp --transport sse --port 3001
+
+  # Solution: Find and kill process or use different port
+  lsof -ti:3001 | xargs kill -9
+  # OR
+  python -m slack_mcp.mcp --transport sse --port 3002
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Error: Address already in use
+  poetry run slack-mcp-server --transport sse --port 3001
+
+  # Solution: Find and kill process or use different port
+  lsof -ti:3001 | xargs kill -9
+  # OR
+  poetry run slack-mcp-server --transport sse --port 3002
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Error: Address already in use
+  uv run slack-mcp-server --transport sse --port 3001
+
+  # Solution: Find and kill process or use different port
+  lsof -ti:3001 | xargs kill -9
+  # OR
+  uv run slack-mcp-server --transport sse --port 3002
+  ```
+  </TabItem>
+</Tabs>
 
 #### 3. Invalid Configuration
 
-```bash
-# Error: Invalid transport specified
-python -m slack_mcp.mcp --transport http
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Error: Invalid transport specified
+  slack-mcp-server --transport http
 
-# Solution: Use valid transport option
-python -m slack_mcp.mcp --transport sse
-```
+  # Solution: Use valid transport option
+  slack-mcp-server --transport sse
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Error: Invalid transport specified
+  python -m slack_mcp.mcp --transport http
+
+  # Solution: Use valid transport option
+  python -m slack_mcp.mcp --transport sse
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Error: Invalid transport specified
+  poetry run slack-mcp-server --transport http
+
+  # Solution: Use valid transport option
+  poetry run slack-mcp-server --transport sse
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Error: Invalid transport specified
+  uv run slack-mcp-server --transport http
+
+  # Solution: Use valid transport option
+  uv run slack-mcp-server --transport sse
+  ```
+  </TabItem>
+</Tabs>
 
 ### Debug Mode
 
 Enable maximum verbosity for troubleshooting:
 
-```bash
-# Maximum debug output
-python -m slack_mcp.mcp \
-  --log-level DEBUG \
-  --timeout 5 \
-  --max-retries 0
-```
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Maximum debug output
+  slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 5 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Maximum debug output
+  python -m slack_mcp.mcp \
+    --log-level DEBUG \
+    --timeout 5 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Maximum debug output
+  poetry run slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 5 \
+    --max-retries 0
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Maximum debug output
+  uv run slack-mcp-server \
+    --log-level DEBUG \
+    --timeout 5 \
+    --max-retries 0
+  ```
+  </TabItem>
+</Tabs>
 
 ### Configuration Verification
 
-```bash
-# Test configuration without starting server
-python -c "
+<Tabs>
+  <TabItem value="console" label="Console Script" default>
+  ```bash
+  # Test configuration without starting server
+  slack-mcp-server --help > /dev/null 2>&1 && echo '✅ CLI configuration is valid' || echo '❌ CLI configuration error'
+  ```
+  </TabItem>
+  <TabItem value="python" label="Python Module">
+  ```bash
+  # Test configuration without starting server
+  python -c "
 import sys
 sys.argv = ['mcp', '--transport', 'sse', '--help']
 try:
@@ -644,7 +1318,21 @@ try:
 except Exception as e:
     print(f'❌ CLI configuration error: {e}')
 "
-```
+  ```
+  </TabItem>
+  <TabItem value="poetry" label="Poetry">
+  ```bash
+  # Test configuration without starting server
+  poetry run slack-mcp-server --help > /dev/null 2>&1 && echo '✅ CLI configuration is valid' || echo '❌ CLI configuration error'
+  ```
+  </TabItem>
+  <TabItem value="uv" label="UV">
+  ```bash
+  # Test configuration without starting server
+  uv run slack-mcp-server --help > /dev/null 2>&1 && echo '✅ CLI configuration is valid' || echo '❌ CLI configuration error'
+  ```
+  </TabItem>
+</Tabs>
 
 For more detailed configuration options, see [MCP Server Configuration](./configuration.mdx).
 For deployment examples using these CLI options, see [MCP Server Deployment](./deployment.mdx).
