🍀 Organize the common content and migrate them to the parent section.

--- a/docs/contents/document/server-references/mcp-server/cli-reference.mdx
+++ b/docs/contents/document/server-references/mcp-server/cli-reference.mdx
@@ -1334,5 +1334,5 @@ except Exception as e:
   </TabItem>
 </Tabs>
 
-For more detailed configuration options, see [MCP Server Configuration](./configuration.mdx).
-For deployment examples using these CLI options, see [MCP Server Deployment](./deployment.mdx).
+For more detailed configuration options, see [Environment Configuration](../environment-configuration.mdx).
+For deployment examples using these CLI options, see [Deployment Guide](../deployment-guide.mdx).
