--- a/docs/contents/document/server-references/mcp-server/index.mdx
+++ b/docs/contents/document/server-references/mcp-server/index.mdx
@@ -12,8 +12,8 @@ The MCP (Model Context Protocol) Server APIs provide programmatic interfaces for
 
 Before using the MCP Server APIs, you need to properly configure and deploy the server:
 
-- 📋 [**Configuration Guide**](./configuration.mdx) - Environment variables, CLI options, and .env file setup
-- 🚀 [**Deployment Guide**](./deployment.mdx) - Local, Docker, Kubernetes, and cloud deployment examples  
+- 📋 [**Environment Configuration**](../environment-configuration.mdx) - Environment variables and authentication setup
+- 🚀 [**Deployment Guide**](../deployment-guide.mdx) - Local, Docker, Kubernetes, and cloud deployment examples  
 - 🔧 [**CLI Reference**](./cli-reference.mdx) - Complete command-line interface documentation
 
 ## Transport Options
@@ -24,7 +24,7 @@ MCP Server supports three transport mechanisms:
 2. **Server-Sent Events (SSE)** - Event-based communication over HTTP
 3. **Streamable HTTP** - HTTP-based streaming communication
 
-For detailed transport configuration, see the [Configuration Guide](./configuration.mdx).
+For detailed transport configuration, see the [CLI Reference](./cli-reference.mdx) and [Environment Configuration](../environment-configuration.mdx).
 
 ## Available Tools
 
