✏️ Merge the content about server modes as only one page to be clear.

--- a/docs/contents/document/server-references/webhook-server/index.mdx
+++ b/docs/contents/document/server-references/webhook-server/index.mdx
@@ -32,13 +32,16 @@ The webhook server exposes the following REST API endpoints:
 
 The webhook server supports two deployment modes:
 
-### **🔧 [Standalone Webhook Server](./standalone-server.mdx)**
+### **⚙️ [Server Modes](./server-modes.mdx)**
+Choose between standalone and integrated deployment options:
+
+**Standalone Mode:**
 - Dedicated webhook server for Slack events only
 - Lightweight deployment focused solely on event processing
 - Ideal for microservices architectures
 - Default port: 3000
 
-### **🚀 [Integrated Server](./integrated-server.mdx)**
+**Integrated Mode:**
 - Combined MCP server and webhook server in one application
 - Full-featured deployment with both MCP tools and event processing
 - Single deployment for complete Slack integration
