➕ Add a new page about command line reference for the webhook server part.

--- a/docs/contents/document/server-references/webhook-server/index.mdx
+++ b/docs/contents/document/server-references/webhook-server/index.mdx
@@ -117,7 +117,7 @@ For deployment patterns, container configurations, and production recommendation
 ## Development Tools
 
 ### **🛠️ CLI Interface**
-For complete CLI options and usage patterns, see [CLI Execution Methods](../cli-execution-methods.mdx).
+For complete webhook server CLI options and usage patterns, see [CLI Reference](./cli-reference.mdx).
 
 ### **💻 Local Development**
 For development setup and testing guides, see [Webhook Server Architecture](/dev/next/architecture/webhook-server-architecture).
